minor styles changes

--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vehicle Rental</title>
-  </head>
+  <title>GoRent - Premium Vehicle Rentals</title>
+  <link rel="icon" type="image/png" href="./src/assets/browseVehicle.png" />
+  <meta name="description" content="GoRent offers premium cars, bikes, and more at affordable prices. Book your ride now!" />
+  <meta name="keywords" content="GoRent, car rental, bike rental, premium vehicle, book car" />  </head>
   <body>
     <div id="root">
     </div>
